--- a/WF.BASE/App.config
+++ b/WF.BASE/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
 <appSettings>
-    <add key="BaseUrl" value="https://hiring.base.vn" />
+    <add key="BaseUrl" value="https://request.base.vn" />
   </appSettings>
 </configuration>
