--- a/WF.BASE/WF.BASE.csproj
+++ b/WF.BASE/WF.BASE.csproj
@@ -26,7 +26,7 @@
     <InstallUrl>https://raw.githubusercontent.com/DongDvVN/wf.base/master/published/</InstallUrl>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>7</ApplicationRevision>
+    <ApplicationRevision>8</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -101,6 +101,7 @@
     <Compile Include="Helper\Constants.cs" />
     <Compile Include="Helper\ConvertExtensions.cs" />
     <Compile Include="Models\Base.cs" />
+    <Compile Include="Models\Excel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\BaseService.cs" />
